[fix[ hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,6 @@ body {
   justify-content: flex-start;
   max-height: 50vh;
   max-width: 25em;
-  
   margin: 15px 15px;
   border-radius: 5px;
   padding: 25px;
@@ -89,6 +88,7 @@ body {
   margin: 0;
   padding: 0px 0px 10px 0px;
   line-height: 1;
+  opacity: 0.6;
 }
 
 #lyrics p {
@@ -97,7 +97,7 @@ body {
   margin: 0px 0px 20px 0px;
 }
 
-#lyrics img {
+.albumCover {
   max-width: 50px;
   max-height: 50px;
   border-radius: 10px
@@ -118,4 +118,30 @@ body {
 
 .lyricsScrollable {
   overflow-y: scroll;
+  position: relative;
+}
+
+.lyricsScrollable::-webkit-scrollbar {
+  display: none;
+}
+
+.lyricsScrollable::before {
+  position: sticky;
+  content: '';
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 1rem;
+  background-color: red;
+}
+ 
+
+.copyrightDiv {
+  display: flex;
+  margin: 20px 0px 00px 00px;
+}
+
+.copyrightedLogo {
+  filter: invert(100%);
+  height: 25px !important;
 }
